# ChangeLog for sys-apps/gentoo-functions
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/gentoo-functions/ChangeLog,v 1.12 2014/05/09 00:03:34 williamh Exp $

  09 May 2014; William Hubbs <williamh@gentoo.org> gentoo-functions-9999.ebuild:
  sync live ebuild

*gentoo-functions-0.5 (09 May 2014)

  09 May 2014; William Hubbs <williamh@gentoo.org> +gentoo-functions-0.5.ebuild:
  version bump

*gentoo-functions-0.4 (08 May 2014)

  08 May 2014; William Hubbs <williamh@gentoo.org> +gentoo-functions-0.4.ebuild:
  version bump, adds consoletype for bug #509284

*gentoo-functions-9999 (07 May 2014)

  07 May 2014; William Hubbs <williamh@gentoo.org>
  +gentoo-functions-9999.ebuild:
  add live ebuild

  02 May 2014; William Hubbs <williamh@gentoo.org>
  -files/gentoo-functions-0.2.sh, -gentoo-functions-0.2.ebuild:
  remove old version

  06 Apr 2014; Fabian Groffen <grobian@gentoo.org> gentoo-functions-0.3.ebuild:
  Added Prefix keywords, part of bug #504284

  02 Apr 2014; William Hubbs <williamh@gentoo.org>
  -files/gentoo-functions-0.1.sh, -files/gentoo-functions-0.sh,
  -gentoo-functions-0.1.ebuild, -gentoo-functions-0.ebuild:
  remove some old versions

*gentoo-functions-0.3 (19 Mar 2014)

  19 Mar 2014; William Hubbs <williamh@gentoo.org>
  +files/gentoo-functions-0.3.sh, +gentoo-functions-0.3.ebuild:
  version bump for #504852.

*gentoo-functions-0.2 (12 Mar 2014)

  12 Mar 2014; William Hubbs <williamh@gentoo.org>
  +files/gentoo-functions-0.2.sh, +gentoo-functions-0.2.ebuild:
  Version bump for prefix fixes: do not hardcode paths to consoletype or
  portageq. Thanks to Ruud Koolen <redlizard@gentoo.org>

*gentoo-functions-0.1 (11 Mar 2014)

  11 Mar 2014; William Hubbs <williamh@gentoo.org>
  +files/gentoo-functions-0.1.sh, +gentoo-functions-0.1.ebuild:
  version bump for bug #504138

  11 Mar 2014; Patrick Lauer <patrick@gentoo.org> metadata.xml:
  Fix herd

*gentoo-functions-0 (10 Mar 2014)
