@@ -1,19 +1,31 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX gentoo-functions-0.3.sh 8833 SHA256 cda87182117570463e262a3a229c1a92ae4ae093f746784d9e758ee138b483b1 SHA512 d80e9f199dd805d2a09603a94c577279ede84a5fe35f1c447cdb56bb513117cdae437949a9aa9162b27e335ec511da41999aed1a8dc92ba0ac543c082619365e WHIRLPOOL 8920dc7c7918aa60bf0b7bdd85c319bf229c1c47b4a9006194522ed1c4d983c7f65d8d872c61567f4e75e3e01d517203d39ec56d49e3b6fbc69fa0a6b6126569
 DIST gentoo-functions-0.4.tar.bz2 10633 SHA256 dd1555fa77d5cd3fd1a6dd11e837c07d34665226528772694f28a0d7984c3831 SHA512 07eeb5caeecb39d8941868a0f88a6905385f63b23940a438df93015ec9881eefe66c01aa008df97bf4bcc380ba605a0d831448e77c8201ee8a85c77a6184ff71 WHIRLPOOL d776a9863620b7792a47e5ea120c851567fb0a4ccf559b76cba7d277df7bf0742a83b2431ac89a94f7990c6e6e7588544ef8db2207c94d14fc6d3e965de200cd
 DIST gentoo-functions-0.5.tar.bz2 10598 SHA256 d32d868de4da077e86adb8bebd8760b7b0263c5cf430afe0920388f106b27df8 SHA512 86a0c26865365f5d85b0aeca7c1456f0cba56a7049c952ff748749fe15dcc5856886310bfbc92406bbe60aebb9716725098f99e92d9f75bd138cac6deb5dfb1b WHIRLPOOL 78f9add4397e537501cd0d27f0a3073da4a54cb8a107562515a0fa7029eabb61277554801d457400d60d1d1805a26db1363b0a71b777676129ce12356b7030ad
 EBUILD gentoo-functions-0.3.ebuild 888 SHA256 25ad3dc00cfd0bae53b145b562dc40a6b385d2e1d06d4438b5a21556047feae5 SHA512 8bdcab17f5339fc61f0dc8ac92f377b5ed9c57f7c116c527ce12a5f493353a68f57d5f5f7c275e0b1bc5cf9960f6a88bfe0cd4e7a886add05736d387436872b5 WHIRLPOOL 62c1e75b849edf486cd0bb8827410237012a2fd0e4ea07b9546d12af43e67baa58bbd30fd56c735fba8c92e85a4d2ecaa3b46549611e920cec6296d2e61b968d
-EBUILD gentoo-functions-0.4.ebuild 921 SHA256 fcc2f961ed430226960551a5266adc5fb3184eec12ab1c25e05aaec82ac60a84 SHA512 cccbd0a7134e22ce6e27c19716a4c6a2f247a9bcaa6bd7c89f3c5153e9a9ffc7c7eedd479d0b22ced1392848dc6eaef23bc515aa30835f89aa08f14b1815db26 WHIRLPOOL 78dfa79bf4c6cd3388ff439fc3af741bec1ea72e65c78ff2451aa80e6aa8501e827ee15163c5db5ff27655e156b9949d4ddda1c1157a0d6e65a8f4c3706ed4e8
-EBUILD gentoo-functions-0.5.ebuild 921 SHA256 08fb7a23f609accfc03ca82a542c757232e1f642396db258af4cb848c82f22db SHA512 ca8c988f9a13bdc147b46558b7631a29477957450afa4efef12c107f5cbcc8b9ba204ec10b10b17cd133304c340a7741c824ed16f0967a3de4429e0244053dbe WHIRLPOOL f3cb58fa5eb2fca487a4c1348d995ec07e9b7b8a4b56cdbbb039847e0454a77190db61847e9ca140dc4310300342b54927b573d557891ae28e7cd6625b1692c5
-EBUILD gentoo-functions-9999.ebuild 922 SHA256 55bddca47dca4ed1baadf232aac46e7c5eefe221ef081290a72a6eea04f33dc1 SHA512 613cd3e32cc4888821b23cdc90485e6579c411831427112f12ddf2908f8d37acb540db58b20901a48193a461e620ff9c8be809e2de6f8c029649326ad5c057fe WHIRLPOOL 92ed357febfc53cf13478da13f3f0e2b478fb75f8d57c22f80691820467d7408f11a60fd0bf3da2c24c1baf4d94caa9b86b81cc0ad2e03ec01c8aac01e5f271a
-MISC ChangeLog 2175 SHA256 fc4b59122bdf4f597db0fb9d33afad1038127c827b9c206165fa1a9d840236d9 SHA512 bda77c8fe4a287a68f6a23d45920cfaeea127284c8dbe305932690e3d0acc56dd05274dd4004df38ee4bc2eacc108d02d27c3307cfdda19fadbd44b8864ab577 WHIRLPOOL 71119f5fb7dd813042f9fa912417a29958868a6f6f1b7ab525679a63465f6c9b5b13f311859420321599d63c215d9384f9fce7dea9f78391c83ede314b74e45b
-MISC metadata.xml 398 SHA256 d413bd2b83e87682d76677290bf28028ee3688fd7838044e2f8a92d7846dbced SHA512 5258fd100f5f19647e2206253d314cb97371401aed8c760224f5e3856a21062593adb8c167045cbeae4973cb7a15e5d83bbccb63e75e5a16156a02efb87085fb WHIRLPOOL a22b833eb820674aa141c478595bf77f033f41678f4dff03772efb6f9204b9a50fc706c4108a7b1f58e2966340dbf808f0083ab482d1dd8189d08e11733c1133
+EBUILD gentoo-functions-0.4.ebuild 956 SHA256 51d791fa2d6c75248f0dd6ca0e8de1523d26973b07d5c4e965bc716963604a53 SHA512 7875cae0fd3edfeca741ac0c6b9363e7569fd77b1b95c7e8ac88b1b8175a953588e2bc127d13fb0aa20f8cfbf4ad5cfebdb5cf4a20e4875f814dc46bfc0898a7 WHIRLPOOL 68eddf99c7b2905893f0b06c4f73030f5c3ecaa0c40c1f6c450c18bef5e3901fb837e4579041ed0e5ead375540e02670ec51368f30b58de794301526ab4d3564
+EBUILD gentoo-functions-0.5.ebuild 956 SHA256 f063e86f75560ac91b37c2a077d42db322dccd43ab94f55b35d8f097b15e7437 SHA512 9a655e3b0d7e138001f6a2388d53c0e98baed1d55858153c6478f339fd2c69490134cc22b79d0e0fd304c70095cc0449274829d8e40b6c0c1624f92e35c85ceb WHIRLPOOL b59a0451fc8020a1425bb7f8d7851f32dd6c6be29b724bdf4b18bcf174d0030c73015a4404368523439db5dc90fca71f43ad50209658a9e8e56b6fcab2a4a6bd
+EBUILD gentoo-functions-9999.ebuild 957 SHA256 66d07d5c933eb185a03697ea0a1dd701e8d5b357a9e037f9a99a094de6a20add SHA512 5a51a9b225a7b9709dac2c4450e1f4f762a5e4220c820c923800c42c748ecfa1ef3ad06a65d22f34fb65e236fbe16f95cd0278245a04214f8621fcba5303bf53 WHIRLPOOL df0104ef31a852e2be5d0558fc83a9e920be37fd3daaf311ac8db1098a7aca885c7a18d9eb0b85b33b2e18ddc259f93a7bd10e10ce06b7737f852f99a107ece8
+MISC ChangeLog 2336 SHA256 47a741f1d624935f033e19083d9676808b28c12a5e5310013bf861800b0b4e4a SHA512 d4d6ed804ad17046356cb6b550380693df143a6391a3962750523bc5eba129fc26a8922387bb2e6756a19d7e7011f50f6b56858b0e752aebe80bb9e435cf85d7 WHIRLPOOL cfa0b8fc3164975ae80070c72d256bb0f7066b1669093f3e63be3bae4e5300f65f330f40860d27187b3d4d2c00b0d9bd98351b3dbdb804f97d6210ec2b744e9f
+MISC metadata.xml 406 SHA256 f4bc8562075b6f72e8aa996f40c42e0c5cf74b58908e267380a069bdd32d3124 SHA512 70207a813b80c09ef89a15bb64aa9e47324d3e614c7f3779875fc2bd2b9f6b7cab7a9d297080fc283993851949f31858c4f8a5c921c416eb64915b3396e78a9d WHIRLPOOL 32a2e35514b03ca7351283a007d02de9ff723a14c9afa190e7f7732f86ac5ea0b8b4712d3e02577c210434fa996f3e39bac5259469710473786067ec4c8d569b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlNsG1sACgkQblQW9DDEZTit1wCfTotDqDDEAQCMGKSwIxdPFS82
-cwsAn1Fy1h01y6da02DnsAO6f+x4eYwX
-=V4PA
+iQJ8BAEBCgBmBQJTbmAAXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVir0VYP/iKuexspAJAOAupgYkWoDj/E
+MyTfAq1E5JnmozKoN3Oog2vBnrS20fK2Rn7ba6Pp0xWvYQJwhgUEUVryox8ToRXF
+kWnXL0ExvKNtBPVux+7DAC9gO3S0myWExoAvT4TLYZ9N3Xqk9US3w1eL1ltIMQjS
+WZevx94ZDk7x+l/Vb3HjWKJZOgDoeiDrauU74Y0orqH2gRNhCcluSl98936cmC3l
+XV8h6H+n+0sW4qEgB/EzKUjWW6fo4FNne8KAFXgm4d2+QikpJ2BiyLzEcmQ9c4S8
+HbYYcQxnXOOrVnq7m+u9bnQGTwF4OJvVl7WNvMywLh+SUXgyyRry9sKBDJ9JNPLJ
+ng5YcSUf7lJu1FVbfy3HXuJpo6/vzFo0gG/YZfIhgKYw2nGJlfezz9ujF9CSUhoe
+pNBJHaH2tRmWDNXSi9LP8333aIMyHSeCtg7E1HraAB8SZTGegujRafStEkJjfi7+
+fHHIn4IJOi2G3BTxm4IJ3o2A9RcRr7b4crUZfLnUUN2LfZAlrXn5YZaluibAUxt7
+R2LzrA2p+G0bYJEAQAgEWfuh7bHhAM9mGcwN7lwvvcpIJuPocFG18eBzsgsme68r
+kRybCbCoSFaeRiOZdFZ7ZqnjR7x3FHvaEUiaj+g5JiRAl34rqje4FQ8i3apMZnsH
+zbZ3k3nc4l/T8+HSxcmP
+=zZ2q
 -----END PGP SIGNATURE-----
