@@ -1,16 +1,18 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/gentoo-functions/Attic/gentoo-functions-0.5.ebuild,v 1.1 2014/05/09 00:01:27 williamh Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/gentoo-functions/Attic/gentoo-functions-0.5.ebuild,v 1.2 2014/05/10 17:20:59 jlec Exp $
 
 EAPI=5
 
 if [[ ${PV} = 9999* ]]; then
-	inherit git-r3
+	vcs=git-r3
 	EGIT_REPO_URI="git://github.com/gentoo/${PN}.git"
 else
 	SRC_URI="http://dev.gentoo.org/~williamh/dist/${P}.tar.bz2"
 	KEYWORDS="~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~ppc-aix ~amd64-fbsd ~sparc-fbsd ~x86-fbsd ~x64-freebsd ~x86-freebsd ~hppa-hpux ~ia64-hpux ~x86-interix ~amd64-linux ~arm-linux ~ia64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~m68k-mint ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris ~x86-winnt"
 fi
+
+inherit ${vcs} toolchain-funcs
 
 DESCRIPTION="base functions required by all gentoo systems"
 HOMEPAGE="http://www.gentoo.org"
@@ -19,5 +21,6 @@ LICENSE="GPL-2"
 SLOT="0"
 IUSE=""
 
-DEPEND=""
-RDEPEND=""
+src_prepare() {
+	tc-export CC
+}
