@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<maintainer>
-		<email>williamh@gentoo.org</email>
-		<name>William Hubbs</name>
-	</maintainer>
-	<herd>base-system</herd>
-	<longdescription lang="en">
+  <maintainer>
+    <email>williamh@gentoo.org</email>
+    <name>William Hubbs</name>
+  </maintainer>
+  <herd>base-system</herd>
+  <longdescription lang="en">
 		This package contains base shell functions which are required by
 		all Gentoo systems.
 	</longdescription>
